# R-Type

./: $  .clang-format  .gitignore  CMakeLists.txt  Client.conf  Dockerfile  Doxyfile  README.md  RTYPE_DOCUMENTATION.md  Resources.conf  ServerDraft.hpp  UML  boss_path_creator.py  build.bat  build.sh  compile_flags.txt  conanfile.txt  generate_uml.sh  main.cpp  notes.txt  regenerate_uml_script.sh
.cache/clangd/index/: AClient.cpp.76EC87F4FA1789FE.idx  AClient.hpp.BE7BAA67B8A8442D.idx  AEnemy.cpp.6E59747FA54B5FB1.idx  APlayer.cpp.317F1E01499172B9.idx  AnimatedSprite.cpp.D88CBBA154AA319F.idx  AnimatedSprite.hpp.0AD155EE1A4122DE.idx  AnimationRegister.cpp.6928EC262F4C6AC1.idx  AnimationRegister.hpp.171928147F58D1CB.idx  App.cpp.A2706A5080098137.idx  App.hpp.E18F2588BB48F4F2.idx  BaseComponents.cpp.2FCC3E90316433D2.idx  BaseComponents.hpp.C6A328292653E8AA.idx  BasicBullet.cpp.D5BAC6755440B8C5.idx  BasicEnemy.cpp.6D34A646E9C4F710.idx  BatchRenderer.cpp.26496CB9872ECC04.idx  BatchRenderer.hpp.16E3DB2366EA2B46.idx  BlackScreenTransition.hpp.DDDA8396787B8C38.idx  Bullet.cpp.F583243419AF7199.idx  Bullet.hpp.914CE84707C1666A.idx  Client.cpp.DD7166E07E60B726.idx  Client.hpp.360569BA8D249CCA.idx  ClientScenes.hpp.4717CA56588BA9F3.idx  ClientWrapper.cpp.D33B6B8CDBFA45BD.idx  ClientWrapper.hpp.ED54DC093EEEF863.idx  Collisions.cpp.04127D4EABCDE51B.idx  Collisions.hpp.9195E8F72C2A3DC9.idx  ConnectionInitReply.cpp.9115007E234EA9C2.idx  CreateRoomReply.cpp.EA23F022E39D9CE5.idx  DumbyBoy.cpp.285835BC1BE5503E.idx  DynamicEntity.hpp.0A0E02239A27C7FD.idx  Enemies.hpp.F0F4D6102B801089.idx  Error.cpp.F1933CFD8F3C1384.idx  Error.hpp.A5DAAD6517F90748.idx  Factory.cpp.2EEB16C2A1F57004.idx  FeedInitReply.cpp.32D2C22188092587.idx  FeedInitRequest.cpp.E67F6B01365F0A46.idx  FrameBuffer.hpp.05467C6E4B932EA5.idx  GUI.cpp.A83354628740E204.idx  GUI.hpp.87336A6563B1818C.idx  InputHandler.cpp.223F7CBCDF1507C0.idx  (+100 more)
.github/workflows/: build.yaml  create_release.yaml
Client/: CMakeLists.txt  main.cpp
Client/include/: Background.hpp  BlackScreenTransition.hpp  Bullet.hpp  Client.hpp  ClientScenes.hpp  ClientWrapper.hpp  Collisions.hpp  Enemies.hpp  Map.hpp  MenuParallax.hpp  Player.hpp  Shooter.hpp  utils.hpp
Client/include/Scenes/: SceneClientConnect.hpp  SceneConnectRoom.hpp  SceneCreateRoom.hpp  SceneGame.hpp  SceneGameOver.hpp  SceneGameWin.hpp  SceneRoomWait.hpp  SceneStart.hpp
Client/src/: Client.cpp  ClientScenes.cpp  ClientWrapper.cpp  Collisions.cpp  Map.cpp  main.cpp
Client/src/Bullet/: BasicBullet.cpp  Bullet.cpp  Shooter.cpp
Client/src/Enemy/: AEnemy.cpp  BasicEnemy.cpp  Centipede.cpp  DumbyBoy.cpp  Factory.cpp  KeyEnemy.cpp  MastodonteEnemy.cpp  Mattis.cpp  Robot.cpp  SkeletonBoss.cpp
Client/src/Player/: APlayer.cpp  Serializable.cpp
Client/src/Scenes/: SceneClientConnect.cpp  SceneConnectRoom.cpp  SceneCreateRoom.cpp  SceneGame.cpp  SceneGameOver.cpp  SceneGameWin.cpp  SceneRoomWait.cpp  SceneStart.cpp
POC/: CMakeCache.txt  CMakeLists.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  animated_sprite.cpp  client_tcp_example.cpp  cmake_install.cmake  ecs_example.cpp  example_joystick.cpp  main.cpp  message_parser.cpp  poc.hpp  server_example.cpp  server_tcp_example.cpp  server_tcp_write_data_to_client.cpp  server_udp_example.cpp  udp_client_example.cpp
POC/POC/: cmake_install.cmake
POC/client/: Makefile  cmake_install.cmake
POC/server/: Makefile  cmake_install.cmake
PileAA/: CMakeLists.txt
PileAA/include/PileAA/: AnimatedSprite.hpp  AnimationRegister.hpp  App.hpp  Backtrace.hpp  BaseComponents.hpp  BatchRenderer.hpp  DynamicEntity.hpp  Error.hpp  FrameBuffer.hpp  GUI.hpp  InputBox.hpp  InputHandler.hpp  InputManager.hpp  LuaApi.hpp  Math.hpp  MusicPlayer.hpp  Parallax.hpp  QuadTree.hpp  Rand.hpp  ResourceManager.hpp  TilesetManager.hpp  Timer.hpp  Types.hpp  VectorExtension.hpp  meta.hpp
PileAA/include/PileAA/paa_commands/: paa_command_ecs.hpp  paa_command_main.hpp  paa_command_state.hpp  paa_getters.hpp  paa_utilities.hpp
PileAA/src/: AnimatedSprite.cpp  AnimationRegister.cpp  App.cpp  BaseComponents.cpp  BatchRenderer.cpp  Error.cpp  FrameBuffer.cpp  GUI.cpp  InputBox.cpp  InputHandler.cpp  InputManager.cpp  ResourceManager.cpp  TilesetManager.cpp  Timer.cpp
PileAA/src/paa_commands/: paa_utilities.cpp
RServer/: CMakeLists.txt
RServer/include/: Client.hpp  Server.hpp
RServer/include/RServer/: AsciiTitle.hpp  async_automated_sparse_array.hpp  async_queue.hpp  utils.hpp
RServer/src/: Server.cpp
RServer/src/Client/: AClient.cpp  Client.cpp  TCPClient.cpp  UDPClient.cpp
RServer/src/Messages/: ConnectionInitReply.cpp  CreateRoomReply.cpp  FeedInitReply.cpp  FeedInitRequest.cpp  GameLauncher.cpp  RequestConnectRoom.cpp  RequestConnectRoomReply.cpp  SignalMarker.cpp  SyncMessage.cpp  TextMessage.cpp  UpdateMessage.cpp  UserConnectRoom.cpp  UserDisconnectFromRoom.cpp  YesNoMessage.cpp  parse_message.cpp
RServer/src/Server/: Server.cpp
Server/: CMakeLists.txt  Room.hpp  RoomManager.hpp  main.cpp
assets/: r-typesheet24.png-autosave.kra  r-typesheet5.png-autosave.kra
assets/maps/: mattis_path.json
assets/maps/BydoEmpire/: BydoMap.json  Map.hpp  compressed_map.json
assets/maps/MiningField/: MiningField.json
assets/maps/RecyclingFactory/: RecyclingFactory.json  centipede.json  centipede_p1.json  centipede_p2.json
assets/maps/Ruins/: Ruins.json
assets/maps/Space/: mattis_path.json  space.json  (+2 more)
client/: CMakeLists.txt  Client.cpp  main.cpp
docs/rfc/: connection.md  messaging.md  synchronization.md
include/Network/: Client.hpp  Messages.hpp  Server.hpp  Types.hpp
include/PileAA/: AnimatedSprite.hpp  App.hpp  BaseComponents.hpp  Error.hpp  InputHandler.hpp  ResourceManager.hpp  TilesetManager.hpp  Timer.hpp  Types.hpp  VectorExtension.hpp  ecs.hpp  meta.hpp
include/rtype/: BulletPool.hpp  IBullet.hpp  IEnemy.hpp  IShooter.hpp
modules/: FindLua.cmake  FindRtype_Boost.cmake  FindRtype_SFML.cmake  FindRtype_SPDLOG.cmake
server/: CMakeLists.txt  Client.cpp  Server.cpp  main.cpp
server/Network/: Server.cpp
setup/: config.iss  createsetup.bat
(+10 files in other folders)
